# newt

./: README.md  TODO.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
doc/: notes.bib  notes.tex
src/examples/: train_mnist.py
src/newt/: __init__.py  newt.py  types.py
tests/: conftest.py  test_newt.py
