[build-system]
requires = ["setuptools >= 62.6"]
build-backend = "setuptools.build_meta"

[project]
name = "newt"
version = "0.0.1"
description = "A Newton-like learning rate scheduler"
dynamic = ["dependencies"]
requires-python = ">= 3.9"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.black]
line-length = 100

[tool.flake8]
max-line-length = 100
ignore = [
    "D105",  # missing docstring in magic method
    "D107",  # missing docstring in __init__
    "D202",  # no blank lines allowed after function docstring
    "E203",  # whitespace before ":"
    "F722",  # forward annotation syntax error
    "W503",  # line break before binary operator
    "DCO010",  # docstring missing on function/method/class
]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
ignore = ["F722"]

[tool.pylint]
max-line-length = 100
disable = [
    "C0411",  # wrong import order
    "E1111",  # assignment with no return value
    "R0913",  # too many arguments
    "R0914",  # too many locals
    "R0917",  # too many positional arguments
]

[tool.pylint.design]
max-attributes = 10

[tool.pylint.main]
source-roots = ["."]

[tool.pylint.typecheck]
generated-members = ["numpy.*", "torch.*"]